--- a/my-app/src/Client/Home/Home.css
+++ b/my-app/src/Client/Home/Home.css
@@ -4,8 +4,8 @@
   justify-content: space-between;
   align-items: center;
   /* padding: 40px; */
-  padding-top: 45%;
-  background-color: #f9f9f9;
+  padding-top: 55%;
+  background-color: #fff;
   overflow: hidden; /* Đảm bảo phần tử ẩn khi chưa xuất hiện */
 }
 /* Nội dung và ảnh trước khi hiển thị */
@@ -39,10 +39,10 @@
   border-radius: 100px;
 }
 .featured-product h2 {
-  padding-left: 300px;
-  font-size: 36px;
+  /* padding-left: 300px; */
+  /* font-size: 36px; */
   color: #333;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 
 .featured-product h3 {
@@ -53,8 +53,8 @@
 }
 
 .featured-product p {
-  padding-left: 400px;
-  padding-right: 100px;
+  /* padding-left: 400px; */
+  /* padding-right: 100px; */
   font-size: 18px;
   color: #555;
   margin-bottom: 80px;
@@ -66,7 +66,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 40px 0px;
+  /* padding: 40px 0px; */
   background-color: #fff;
 }
 
